# pyChomikuj

./: .gitignore  README.md  pyproject.toml
patched_apk_builder/: MD5Encryption.smali.patch  README.md  patched_apk_builder.sh
pychomikuj/: ChomikujMobile.py  __init__.py  pychomikuj_exceptions.py  set_up_logging.py
